[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ao3.py"
description = "An asynchronous scraper for Archive Of Our Own, made in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Thanos", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8",
    "cssselect",
    "lxml",
    "lxml-stubs@git+https://github.com/Sachaa-Thanasius/lxml-stubs.git", # My custom, slightly more typed version.
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "ao3.__version__" }

[project.optional-dependencies]
speed = ["aiodns>=1.1", "Brotli", "cchardet"]

[project.urls]
Homepage = "https://github.com/Sachaa-Thanasius/ao3.py"
Repository = "https://github.com/Sachaa-Thanasius/ao3.py"
"Bug Tracker" = "https://github.com/Sachaa-Thanasius/ao3.py/issues"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.supress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "ANN101",  # Python310 doesn't have Self in typing, so I'm not using it everywhere for self.
    "ANN102",  # Same deal as ANN101, but for cls.
    "ANN401",  # Need Any for args and kwargs in some places.
    "PLR0913", # Some functions require more than 5 arguments.
    "A001",    # Shadowing "id" and "type" in some places.
    "A002",    # Shadowing "id" and "type" in some places.
    "A003",    # Shadowing "id" and "type" in some places.
    "BLE001",  # Using "Exception" as a blanket catch.
    "PD",      # Pandas isn't relevant for this project.
    "NPY",     # Numpy isn't relevant for this project.
]
unfixable = [
    "ERA",     # I don't want anything erroneously detected deleted by this.
    "PLC0414", # This causes issues when declaring module imports in __init__ files. Disallow deletion.
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F403",    # Undefined import with star
    "PLC0414", # Import alias does not rename original package
]

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.pydocstyle]
property-decorators = ["ao3.utils.cached_slot_property"] # Similar enough to functools.cached_property().

[tool.pyright]
include = ["ao3", "tests"]
venvPath = "."             # Necessary to point Pyright at the custom lxml-stubs.
venv = ".venv"             # Necessary to point Pyright at the custom lxml-stubs.

pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportMissingTypeStubs = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
