[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ao3.py"
description = "An asynchronous scraper for Archive Of Our Own, made in Python."
requires-python = ">=3.8"
version = "0.1.2"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "python-3", "ao3", "scraper"]
authors = [{ name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["ao3"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"ao3" = ["py.typed"]

[project.optional-dependencies]
speed = ["aiodns>=1.1", "Brotli", "cchardet"]
docs = ["sphinx", "furo", "sphinxcontrib-trio"]

[project.urls]
Homepage = "https://ao3py.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/Sachaa-Thanasius/ao3.py"
"Bug Tracker" = "https://github.com/Sachaa-Thanasius/ao3.py/issues"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py38"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "PLR0913", # Some functions require more than 5 arguments.
    "ANN101",  # Python310 doesn't have Self in typing, so I'm not using it everywhere for self.
    "ANN102",  # Same deal as ANN101, but for cls.
    "ANN401",  # Need Any for args and kwargs in some places.
    "A001",    # Shadowing "id" and "type" in some places.
    "A002",    # Shadowing "id" and "type" in some places.
    "A003",    # Shadowing "id" and "type" in some places.
    "PD",      # Pandas isn't relevant for this project.
    "NPY",     # Numpy isn't relevant for this project.
]
unfixable = [
    "ERA",     # I don't want anything erroneously detected deleted by this.
    "PLC0414", # This causes issues when declaring module imports in __init__ files. Disallow deletion.
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F403",    # Undefined import with star
    "PLC0414", # Import alias does not rename original package
]
"tests/*" = ["INP001"] # Leave the tests alone.

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.pydocstyle]
property-decorators = ["ao3.utils.cached_slot_property"] # Similar enough to functools.cached_property()?

[tool.pyright]
include = ["ao3", "tests"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.8"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportMissingTypeStubs = "warning"
reportCallInDefaultInitializer = "warning"
# reportImportCycles = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
