[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ao3.py"
description = "An asynchronous scraper for Archive Of Our Own, made in Python."
requires-python = ">=3.8"
version = "0.1.2"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "python-3", "ao3", "scraper"]
authors = [
    { name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["ao3"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"ao3" = ["py.typed"]

[project.optional-dependencies]
speed = ["aiodns>=1.1", "Brotli", "cchardet"]
docs = ["sphinx", "furo", "sphinxcontrib-trio"]

[project.urls]
Homepage = "https://ao3py.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/Sachaa-Thanasius/ao3.py"
"Issue Tracker" = "https://github.com/Sachaa-Thanasius/ao3.py/issues"


[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "S101", # Use of assert here is a known quantity. Blame typing memes.
    # "PLR2004", # Magic value comparison. May remove later.
    "SIM105", # Suppressable exception. contextlib.suppress is a stylistic choice with overhead.
    "C90",    # McCabe complexity memes.
    "PD011",  # Erroneous issue that triggers for any .values attribute access at all.
    "S311",   # No need for cryptographically secure random number generation in this use case.
    "ANN101", # Type of self is implicit.
    "ANN102", # Type of cls is implicit.
    "ANN204", # Special method return types are known by type checker.
    "ANN401", # Not sure how else to type *args and **kwargs when they could be anything.
    "PLR",    # Complexity things.
    "PYI036", # False positive for annotations for __exit__ when TYPE_CHECKING else has alternatives for types.
    "A001",   # Shadowing "id" and "type" in some places.
    "A002",   # Shadowing "id" and "type" in some places.
    "A003",   # Shadowing "id" and "type" in some places.
    # Recommended by Ruff when using Ruff format.
    "E111",
    "E114",
    "E117",
    "Q003",
    "COM812",
    "COM819",
    # "E501",
    "ISC001",
    "ISC002",
]
unfixable = [
    "ERA",     # I don't want anything erroneously detected deleted by this.
    "PLC0414", # This causes issues when declaring module imports in __init__ files. Disallow deletion.
]

[tool.ruff.lint.per-file-ignores]
# Star import usually throws these.
"__init__.py" = [
    "F403",    # Undefined import with star
    "PLC0414", # Import alias does not rename original package
]
"tests/*" = ["INP001"] # Leave the tests alone.

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
property-decorators = [
    "ao3.utils.cached_slot_property",
] # Similar enough to functools.cached_property()?

[tool.pyright]
include = ["ao3", "tests"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.8"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportMissingTypeStubs = "warning"
reportCallInDefaultInitializer = "warning"
# reportImportCycles = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
